<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <Button
        android:id="@+id/button_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button_1"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/button_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button_2"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/button_3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button_3"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/button_4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button_4"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/button_5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button_5"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/button_6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button_6"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/button_7"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button_7"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/button_8"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button_8"
        android:textAllCaps="false"/>
</LinearLayout>