<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    >
    <TextView
        android:id="@+id/cb_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_title"
        android:textSize="25sp"
        android:textColor="#22ee11"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
    <CheckBox
        android:id="@+id/cb_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android"
        android:textSize="20sp"
        android:layout_below="@id/cb_title"/>
    <CheckBox
        android:id="@+id/cb_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linux"
        android:textSize="20sp"
        android:layout_below="@id/cb_1"/>
    <CheckBox
        android:id="@+id/cb_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mac"
        android:textSize="20sp"
        android:layout_below="@id/cb_2"/>
    <CheckBox
        android:id="@+id/cb_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other"
        android:textSize="20sp"
        android:layout_below="@id/cb_3"/>

    <LinearLayout
        android:layout_below="@id/cb_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_title_1"
        android:textSize="25sp"
        android:textColor="#ffaabb" />
        <CheckBox
            android:id="@+id/cb_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textSize="20sp"/>
        <CheckBox
            android:id="@+id/cb_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textSize="20sp"/>
        <CheckBox
            android:id="@+id/cb_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textSize="20sp"/>

    </LinearLayout>
</RelativeLayout>