<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <EditText
        android:id="@+id/et_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:maxLines="1"
        android:inputType="text"
        android:background="@drawable/bg_et_1"
        android:drawableStart="@drawable/username"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>


    <EditText
        android:id="@+id/et_3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_below="@id/et_1"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_et_1"
        android:drawableStart="@drawable/password"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>
    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_btn1"
        android:layout_below="@id/et_3"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textColor="#ffffff"/>

</RelativeLayout>